tests/ui/proc-macro/issue-81543-item-parse-err.stderr
error: expected identifier, found `32`
  --> $DIR/issue-81543-item-parse-err.rs:11:8
   |
LL |     fn 32() {}
   |        ^^ expected identifier

error: aborting due to 1 previous error

